# python-mediator

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
example/: test_event_advanced.py  test_event_simple.py  test_request_simple.py
mediator/common/: modifiers.py  operators.py  types.py
mediator/common/factory/: __init__.py  base.py  cascade.py  factories.py  mappers.py  policies.py  utils.py
mediator/common/factory/test/: test_cascade.py  test_mappers.py  test_policies.py  test_utils.py
mediator/common/handler/: __init__.py  base.py  handlers.py
mediator/common/handler/test/: test_handlers.py
mediator/common/registry/: __init__.py  base.py  registry.py  stores.py
mediator/common/registry/test/: conftest.py  test_base.py  test_registry_registry.py  test_registry_stores.py
mediator/common/test/: test_modifiers.py  test_operators.py
mediator/event/: __init__.py  aggregate.py  base.py  local.py  registry.py
mediator/event/test/: test_aggregate.py  test_local.py
mediator/request/: __init__.py  base.py  local.py  registry.py
mediator/request/test/: test_request.py
mediator/utils/: context.py  inspection.py
mediator/utils/test/: test_inspection.py
tests/: test_event.py  test_request.py
tests/common/: common.py  test_factory_cascade.py  test_factory_factories.py  test_factory_policies.py  test_factory_utils.py  test_handler_handlers.py  test_operators.py  test_registry_base.py  test_registry_registry.py  test_registry_stores.py
tests/example/: test_request_advanced.py
tests/utils/: test_inspection.py
