[tool.poetry]
name = "python-mediator"
version = "0.2.0"
description = "Python mediator bus microframework for CQRS, Event-driven approaches"
authors = ["Damian Łukawski <damian@lukawscy.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"
flake8 = "^3.8.3"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.1"
pytest = "^6.1.0"
coverage = "^5.4"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
