[tool.poetry]
name = "python-mediator"
version = "0.6.1"
description = "Python mediator bus microframework for CQRS + ES"
authors = ["Damian Łukawski <damian@lukawscy.pl>"]
license = "MIT"
packages = [
    { include = "mediator" },
]
readme = "README.md"
homepage = "https://github.com/dlski/python-mediator"
repository = "https://github.com/dlski/python-mediator"
keywords = ["mediator", "cqrs", "event-driven", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = ">=3.7 <3.11"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"
flake8 = "^3.8.3"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.1"
pytest = "^6.1.0"
pytest-cov = "^2.11.1"
pytest-asyncio = "^0.14.0"
importlib_metadata = { version = "^3.7.0", python = "~3.7" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
